syntax = "proto3";

service GServerService {
  rpc ReadServer (ReadServerRequest) returns (ReadServerReply);
  rpc WriteServer (WriteServerRequest) returns (WriteServerReply);
  //rpc ListServer (ListServerRequest) returns (ListServerReply);
}
message ReadServerRequest {
  string partition_id = 1;
  string object_id = 2;	
}
message ReadServerReply {
  Object object = 1;
}

message WriteServerRequest {
  string partition_id = 1;
  string object_id = 2;
  Object new_object = 3;
}
message WriteServerReply {
  bool ok = 1;
}

message ListServerRequest {
}

message ListServerReply {
  repeated Object users = 1;
}
message Object {
   string value = 1;
}